# kit-crypto-c

./: CMakeLists.txt
include/kitcryptoc/: aes.h  md5.h  md5_hmac.h  sha1.h  sha1_hmac.h  sha2.h  sha2_hmac.h  twofish.h  ung.h  version.h
src/: aes.c  md5.c  md5_hmac.c  sha1.c  sha1_hmac.c  sha2.c  sha2_hmac.c  twofish.c  ung.c  version.c
src/aarch32/: aes_unix.S
src/aarch64/: aes_unix.S
src/i386/: aesni_unix.asm
src/x86-64/: aesni_unix.asm  aesni_win64.asm  isSSE41.asm  sha2_512.asm  twofish_unix_sse2.asm
tests/: CMakeLists.txt  clock.c  clock.h  test_aes.c  test_md5.c  test_md5_hmac.c  test_perf_aes.c  test_perf_sha2.c  test_perf_twofish.c  test_sha1.c  test_sha1_hmac.c  test_sha2.c  test_sha2_hmac.c  test_twofish.c  test_ung.c  test_version.c
